# statusbar-alarm

./: configure.ac
debian/: changelog  control  rules
src/: Makefile.am  clock-plugin.c  clock-plugin.desktop
